--- a/job_application_page.html
+++ b/job_application_page.html
@@ -86,9 +86,7 @@
                             <span class="absolute top-0 right-0 h-2 w-2 rounded-full bg-red-500"></span>
                         </button>
                     </div>
-                    <div class="w-10 h-10 rounded-full bg-gray-300 flex items-center justify-center text-gray-600 text-sm">
-                        <i class="fas fa-user"></i>
-                    </div>
+                    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="صورة الملف الشخصي" class="w-10 h-10 rounded-full">
                 </div>
             </div>
         </div>
@@ -100,11 +98,17 @@
             <div class="step">2</div>
             <div class="step">3</div>
             <div class="step">4</div>
+            <div class="step">5</div>
         </div>
 
         <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card" id="step1">
             <h2 class="text-lg font-bold mb-4">الخطوة 1: معلومات شخصية</h2>
             <form id="employeeForm" onsubmit="event.preventDefault(); window.nextStep(1);">
+                <div class="mb-4">
+                    <label for="profileImage" class="block text-sm font-medium text-gray-700">رفع صورة الملف الشخصي</label>
+                    <input type="file" id="profileImage" accept="image/*"
+                           class="w-full border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required oninvalid="this.setCustomValidity('الرجاء رفع صورة الملف الشخصي')" oninput="setCustomValidity('')">
+                </div>
                 <div class="mb-4">
                     <label for="fullName" class="block text-sm font-medium text-gray-700">الاسم بالكامل</label>
                     <input type="text" id="fullName" placeholder="أدخل اسمك بالكامل"
@@ -183,7 +187,23 @@
         </div>
 
         <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step4">
-            <h2 class="text-lg font-bold mb-4">الخطوة 4: تأكيد المعلومات وتحديد السعر</h2>
+            <h2 class="text-lg font-bold mb-4">الخطوة 4: الأعمال السابقة</h2>
+            <div class="mb-4">
+                <label for="previousWorks" class="block text-sm font-medium text-gray-700">رفع صور الأعمال السابقة</label>
+                <input type="file" id="previousWorks" multiple accept="image/*"
+                       class="w-full border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required oninvalid="this.setCustomValidity('الرجاء رفع صور الأعمال السابقة')" oninput="setCustomValidity('')">
+            </div>
+
+            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="window.prevStep(4)">
+                السابق
+            </button>
+            <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="window.nextStep(4)">
+                التالي
+            </button>
+        </div>
+
+        <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step5">
+            <h2 class="text-lg font-bold mb-4">الخطوة 5: تأكيد المعلومات وتحديد السعر</h2>
             <p class="text-gray-700 mb-4">يرجى مراجعة المعلومات المدخلة بعناية قبل الإرسال. تأكد من أن جميع المعلومات صحيحة ودقيقة لضمان المصداقية.</p>
             <div class="mb-4">
                 <label for="salaryFrom" class="block text-sm font-medium text-gray-700">السعر من</label>
@@ -196,7 +216,7 @@
                        class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required oninvalid="this.setCustomValidity('الرجاء إدخال السعر الأعلى')" oninput="setCustomValidity('')">
             </div>
 
-            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="window.prevStep(4)">
+            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="window.prevStep(5)">
                 السابق
             </button>
             <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="window.submitForm()">
@@ -209,7 +229,8 @@
         // استيراد الدوال اللازمة من Firebase SDKs
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
         import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-        // تم إزالة استيراد getStorage و ref و uploadBytes و getDownloadURL
+        // إعادة استيراد Storage
+        import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
 
         // تهيئة Firebase: هذه هي معلومات مشروعك
         const firebaseConfig = {
@@ -225,60 +246,70 @@
         // تهيئة Firebase App
         const app = initializeApp(firebaseConfig);
 
-        // الحصول على كائن Firestore
+        // الحصول على كائنات Firestore و Storage
         const db = getFirestore(app);
-        // تم إزالة تعيين window.storage
+        const storage = getStorage(app);
 
+        // جعل `db` و `storage` متاحين عالمياً لدوال JavaScript الأخرى
         window.db = db;
+        window.storage = storage;
 
         let currentStep = 1;
+        const totalSteps = 5; // تم تحديث العدد الكلي للخطوات
 
         // دالة للانتقال للخطوة التالية
         window.nextStep = function(step) {
             const stepElement = document.getElementById(`step${step}`);
-            const currentForm = stepElement.querySelector('form');
+            const currentForm = stepElement.querySelector('form'); // محاولة الحصول على النموذج داخل الخطوة
 
+            // التحقق من صلاحية النموذج فقط إذا كان موجودًا في الخطوة الحالية
             if (currentForm) {
                 if (!currentForm.checkValidity()) {
                     currentForm.reportValidity();
+                    return; // إيقاف التنفيذ إذا كان النموذج غير صالح
+                }
+            } else if (step === 4) { // الخطوة 4 (رفع الصور) لا تحتوي على <form> مباشر
+                const previousWorksInput = document.getElementById('previousWorks');
+                if (previousWorksInput.hasAttribute('required') && previousWorksInput.files.length === 0) {
+                    previousWorksInput.setCustomValidity('الرجاء رفع صور الأعمال السابقة');
+                    previousWorksInput.reportValidity();
                     return;
+                } else {
+                    previousWorksInput.setCustomValidity(''); // مسح رسالة التحقق إذا كانت صالحة
                 }
             }
 
+
+            // إخفاء الخطوة الحالية
             stepElement.classList.add('hidden');
+
+            // الانتقال إلى الخطوة التالية
             currentStep++;
-            // إذا كانت الخطوة الحالية هي 4، تخطى إلى 5 (التي أصبحت الآن 4 في التسلسل الجديد)
-            // بما أننا أزلنا خطوة 4، فإن الخطوة 5 الأصلية أصبحت 4.
-            // إذا كان `step` هو 3 (المهارات)، فالخطوة التالية (بعد التخطي) هي 4.
-            if (step === 3 && currentStep === 4) { // هذا الشرط للتأكد من أننا قادمون من خطوة المهارات
-                // لا نحتاج لتغيير currentStep هنا لأنه يزيد تلقائيا
+            if (currentStep > totalSteps) {
+                currentStep = totalSteps; // التأكد من عدم تجاوز الحد الأقصى للخطوات
             }
-
-
             document.getElementById(`step${currentStep}`).classList.remove('hidden');
-            window.updateSteps();
+            window.updateSteps(); // تحديث مؤشرات الخطوات
         };
 
         // دالة للانتقال للخطوة السابقة
         window.prevStep = function(step) {
             document.getElementById(`step${step}`).classList.add('hidden');
             currentStep--;
-            // إذا كانت الخطوة الحالية 4 (بعد التعديل) ونحن نعود، فتكون الخطوة السابقة هي 3
-            if (step === 4 && currentStep === 3) {
-                // لا نحتاج لتغيير currentStep هنا
+            if (currentStep < 1) {
+                currentStep = 1; // التأكد من عدم النزول عن الخطوة الأولى
             }
-
             document.getElementById(`step${currentStep}`).classList.remove('hidden');
-            window.updateSteps();
+            window.updateSteps(); // تحديث مؤشرات الخطوات
         };
 
         // دالة لتحديث مؤشرات الخطوات
         window.updateSteps = function() {
             const steps = document.querySelectorAll('.step');
-            steps.forEach((step, index) => {
-                step.classList.remove('active');
+            steps.forEach((stepEl, index) => {
+                stepEl.classList.remove('active');
                 if (index < currentStep) {
-                    step.classList.add('active');
+                    stepEl.classList.add('active');
                 }
             });
         };
@@ -318,20 +349,31 @@
                 document.getElementById('skillError').classList.remove('hidden');
             } else {
                 document.getElementById('skillError').classList.add('hidden');
-                window.nextStep(3); // الانتقال إلى الخطوة التالية
+                window.nextStep(3); // الانتقال إلى الخطوة التالية (الخطوة 4 الجديدة)
             }
         };
 
         // دالة إرسال النموذج المحدثة لربطها بـ Firebase
         window.submitForm = async function() {
+            // تحقق من صلاحية حقول الخطوة الأخيرة قبل الإرسال الفعلي
+            const salaryFromInput = document.getElementById('salaryFrom');
+            const salaryToInput = document.getElementById('salaryTo');
+
+            if (!salaryFromInput.checkValidity() || !salaryToInput.checkValidity()) {
+                salaryFromInput.reportValidity();
+                salaryToInput.reportValidity();
+                return;
+            }
+
             // إضافة مؤشر تحميل أو تعطيل الزر لمنع الإرسال المتعدد
-            const submitButton = document.querySelector('#step4 button[type="submit"]');
+            const submitButton = document.querySelector('#step5 button[type="submit"]');
             submitButton.disabled = true;
             const originalButtonText = submitButton.textContent;
             submitButton.textContent = 'جاري الإرسال...';
 
             try {
                 // 1. جمع بيانات النموذج
+                const profileImageFile = document.getElementById('profileImage').files[0];
                 const fullName = document.getElementById('fullName').value;
                 const jobTitle = document.getElementById('jobTitle').value;
                 const jobLocation = document.getElementById('jobLocation').value;
@@ -343,10 +385,34 @@
                     document.getElementById('skill4').value,
                     document.getElementById('skill5').value
                 ];
+                const previousWorksFiles = document.getElementById('previousWorks').files; // إعادة جلب الملفات
                 const salaryFrom = parseInt(document.getElementById('salaryFrom').value);
                 const salaryTo = parseInt(document.getElementById('salaryTo').value);
 
-                // 2. بناء كائن بيانات الموظف
+                let profileImageUrl = null;
+                const previousWorksUrls = [];
+
+                // 2. رفع صورة الملف الشخصي إلى Cloud Storage (إذا وُجدت)
+                if (profileImageFile) {
+                    const profileImageRef = ref(window.storage, `profileImages/${Date.now()}-${profileImageFile.name}`);
+                    const snapshot = await uploadBytes(profileImageRef, profileImageFile);
+                    profileImageUrl = await getDownloadURL(snapshot.ref);
+                    console.log('تم رفع صورة الملف الشخصي:', profileImageUrl);
+                }
+
+                // 3. رفع صور الأعمال السابقة إلى Cloud Storage (إذا وُجدت)
+                if (previousWorksFiles.length > 0) {
+                    for (let i = 0; i < previousWorksFiles.length; i++) {
+                        const file = previousWorksFiles[i];
+                        const previousWorkRef = ref(window.storage, `previousWorks/${Date.now()}-${file.name}`);
+                        const snapshot = await uploadBytes(previousWorkRef, file);
+                        const url = await getDownloadURL(snapshot.ref);
+                        previousWorksUrls.push(url);
+                        console.log(`تم رفع صورة العمل السابق ${i+1}:`, url);
+                    }
+                }
+
+                // 4. بناء كائن بيانات الموظف
                 const employeeData = {
                     fullName: fullName,
                     jobTitle: jobTitle,
@@ -357,19 +423,21 @@
                         from: salaryFrom,
                         to: salaryTo
                     },
+                    profileImageUrl: profileImageUrl, // رابط صورة الملف الشخصي المرفوعة
+                    previousWorksUrls: previousWorksUrls, // قائمة روابط صور الأعمال السابقة المرفوعة
                     timestamp: new Date().toISOString() // تسجيل وقت الإضافة بتنسيق ISO
                 };
 
-                // 3. حفظ بيانات الموظف في Cloud Firestore في مجموعة 'employees'
+                // 5. حفظ بيانات الموظف في Cloud Firestore في مجموعة 'employees'
                 const docRef = await addDoc(collection(window.db, "employees"), employeeData);
                 console.log("تم إضافة الموظف بنجاح بمعرف:", docRef.id);
 
-                // 4. إظهار رسالة نجاح وإعادة تعيين النموذج
+                // 6. إظهار رسالة نجاح وإعادة تعيين النموذج
                 alert('تم تسجيل الموظف بنجاح في قاعدة البيانات!');
                 document.getElementById('employeeForm').reset(); // مسح النموذج بالكامل
 
                 // إعادة واجهة المستخدم للخطوة الأولى
-                document.getElementById('step4').classList.add('hidden');
+                document.getElementById('step5').classList.add('hidden');
                 currentStep = 1;
                 document.getElementById('step1').classList.remove('hidden');
                 window.updateSteps();
